# Z0ftware

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
artifacts/src/: na-sap12-1.sap  na-sap12-2.sap  ua-sap37.sap  uasap.sap
doc/: assembler.md  bcd.md  cards.md  listings.md  loaders.md  output.md  simh.md
include/Z0ftware/: asm.hpp  bcd.hpp  card.hpp  characters.hpp  charset.hpp  config.h.in  convert.hpp  disasm.hpp  exprs.hpp  field.hpp  hollerith.hpp  op.hpp  operation.hpp  p7bistream.hpp  parity.hpp  parser.hpp  sharereader.hpp  signature.hpp  tape.hpp  tapeeditstream.hpp  unicode.hpp  utils.hpp  word.hpp
lib/: CMakeLists.txt  asm.cpp  bcd.cpp  card.cpp  characters.cpp  charset.cpp  convert.cpp  disasm.cpp  exprs.cpp  op.cpp  operation.cpp  p7bistream.cpp  parity.cpp  parser.cpp  sharereader.cpp  tape.cpp  tapeeditstream.cpp  utils.cpp
sap23/: CMakeLists.txt  sap23.cpp
tape/: CMakeLists.txt  tape.cpp
tapedump/: CMakeLists.txt  sharedump.cpp  tapedump.cpp
tests/: CMakeLists.txt  cards.cpp  characters.cpp  exprs.cpp  field.cpp  sap.cpp  word.cpp
tests/programs/: bootcdr.sap  cardcall.sap  cardcall1.sap  cardload.sap  forself.sap  halt.sap  nybl1.sap  sixes.sap  zeros.sap
